Commit desde proyecto clonado por SergioHyM

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     
 =======
     <p>Este es un parrafo desde el proyecto clonado</p>
+    <p>Este es un párrafo creado por SHM aplicando Fork</p>
 
 </body>
 </html>
